tests/ui/parser/doc-before-rbrace.rs
fn main() {
    println!("Hi"); /// hi
    //~^ ERROR found a documentation comment that doesn't document anything
    //~| HELP if a comment was intended use `//`
}

// ferrocene-annotations: fls_q8l2jza7d9xa
// Comments
